syntax = "proto3";
package dualitylabs.duality.dex;

option go_package = "github.com/duality-labs/duality/x/dex/types";

message PairId {
  
  string token0 = 1; 
  string token1 = 2; 
}
